# ai-engineering-course

./: .gitignore  README.md  download_stopwords.py  llm_01.py  pyproject.toml  rag.py  rag_fundamentals.md  rag_qdrant.py  tokenization_01.py  tokenization_03.py  tokenization_04.py
docling/: chunking_3.py  extraction_1.py  extraction_images_2.py  hybrid_chunking_4.py  output.json
index_dir/: _MAIN_1.toc
system_retrieval_fundamentals/: README.md  tokenization_02.py
system_retrieval_fundamentals/index_dir/: MAIN_pyv6o2guzi8wbnot.seg
using_llms/: llm_02.py
